Bugfix slider width overflow on production server

--- a/scss/site/_global.scss
+++ b/scss/site/_global.scss
@@ -88,3 +88,7 @@ footer {
 	height: 4px;
 	background-color: $red-brand;
 }
+
+.container {
+	overflow: hidden;
+}
